[LFC][IFC] Breaking before hyphen is only allowed when line-break is loose https://bugs.webkit.org/show_bug.cgi?id=232191

Reviewed by Antti Koivisto.

Source/WebCore:

This is in preparation for enabling the fix for webkit.org/b/232192.

Two hyphenation related WPT tests (line-break-normal-hyphens-002.html, line-break-strict-hyphens-002.html)
simply pass because of a LayoutUnit (block width) vs. float (measured text width) precision mismatching bug.
This precision issue makes the line breaking code believe that fewer characters fit the line
producing the expected results for those two tests.
Let's fix the line breaking logic first by adding "breaks before hyphens" rules,
so that when webkit.org/b/232192 is addressed, we won't be seeing any WPT regressions.

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::midWordBreak):

Source/WTF:

* wtf/unicode/CharacterNames.h:


Canonical link: https://commits.webkit.org/243453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284744 268f45cc-cd09-0410-ab3c-d52691b4dbfc